--- a/includes/programs.pug
+++ b/includes/programs.pug
@@ -13,7 +13,7 @@ block content
     .col-sm
       .group
         .group-title.prog-title
-          div.badge.badge-danger Пароль на архивы: zakladki2019
+          div.badge.badge-danger Пароль на архивы: zakladki
 
           span.badge.badge-warning Интернет-хранилище файлов
         ul
@@ -59,37 +59,89 @@ block content
     .col-sm
       .group
         .group-title
+          span.badge.badge-warning Архиваторы
+        ul
+          li
+            div.icon.prog_7zip
+            a(href='https://drive.google.com/open?id=1TSaGxlXBG_bRzipPaexwFPfi4eo-U8i3', target='_blank') 7z1900-x86
+          li
+            div.icon.prog_7zip
+            a(href='https://drive.google.com/open?id=106XgURnBE37VC26xyYxCgKusbfCC1hFc', target='_blank') 7z1900-x64
+          li
+            div.icon.prog_winrar
+            a(href='https://drive.google.com/open?id=1vDBqhWCzqkNTlfd8IKr1i9QX7fATYTuU', target='_blank') WinRAR 5.70
+            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
+      .group
+        .group-title
+          span.badge.badge-warning Проигрыватель
+        ul
+          li
+            div.icon.prog_Aimp
+            a(href='https://drive.google.com/open?id=1OqFi7OJjL5FZKjSC_FC3gRbOqsE3sNV-', target='_blank') Aimp (+radio+skin)
+            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
+      .group
+        .group-title
+          span.badge.badge-warning Скриншотер
+        ul
+          li
+            div.icon.prog_FastStone
+            a(href='https://drive.google.com/open?id=1isVYJIBqRhk3ON5CIlUVBb1SO1wyepv7', target='_blank') FastStone.Capture_portable
+            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
+                      
+    .col-sm
+      .group
+        .group-title
           span.badge.badge-warning Удаленное управление компютером
         ul
           li
             div.icon.ammyy_admin
-            a(href='https://drive.google.com/open?id=1PT7hUXJg_lgWEpWcTVEc9cKqAOQ6TiY1', target='_blank') Ammyy_admin3.8
-            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki2019')
+            a(href='https://drive.google.com/open?id=1BEIar3Ge5aw_uDY5isKTNZ5l_4BWD2Nj', target='_blank') Ammyy_admin3.8
+            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
           li
             div.icon.ammyy_admin
-            a(href='https://drive.google.com/open?id=1aUH68RhLyTjEuOl3CyqJryJJnOmZPb5C', target='_blank') Ammyy_admin3.7
-            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki2019')
+            a(href='https://drive.google.com/open?id=1Yp0_ko_FNcsMm6gMd0vffeMIchArFWD6', target='_blank') Ammyy_admin3.7
+            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
           li
             div.icon.TeamViewer
-            a(href='https://drive.google.com/open?id=1MxHlp7JFKIZy-w5tgbD_5IWkpwGQBp6O', target='_blank') TeamViewer 14.1.3399 Portable
-            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki2019')
-    .col-sm
+            a(href='https://drive.google.com/open?id=1ZTJCd2kIU_HOxJe_wQ8nMOxVbytjNnVJ', target='_blank') TeamViewer.14.Portable
+            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
+      .group
+        .group-title
+          span.badge.badge-warning Очистка компютера (+автозапуск)
+        ul
+          li
+            div.icon.prog_ccleaner
+            a(href='https://drive.google.com/open?id=1SRFx7hNjMrxysVsD2PSFeXjI7XEn7GLe', target='_blank') CCleaner_5.55.7108
+            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
+          li
+            div.icon.prog_regorganizer
+            a(href='https://drive.google.com/open?id=1JL9K_7YX73tGfGFaUMP-1cxG-RmDubHg', target='_blank') RegOrganizer_8.26
+            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
+      .group
+        .group-title
+          span.badge.badge-warning Анализ, тест и мониторинг компьютера
+        ul
+          li
+            div.icon.prog_AIDA64
+            a(href='https://drive.google.com/open?id=11pfy__qDlI79InKldhfoDBCLFo0kHDN-', target='_blank') AIDA64
+            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
+          li
+            div.icon.prog_hwmonitor
+            a(href='https://drive.google.com/open?id=1tyknLqKcjkOZvMix-MWBfxDJOkrIkMfU', target='_blank') HWMonitor
+            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
       .group
         .group-title
           span.badge.badge-warning Для N.O.D.32 продление лицензии
         ul
           li
             div.icon.prog.tnod32
-            a(href='https://drive.google.com/open?id=1W-VCgsxRUvFafF_oXWoPhPwZ1pMt-dLT', target='_blank') TNod1.6.4.0Final+Portable
-            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki2019')
+            a(href='https://drive.google.com/open?id=1_n2xbV1wT7c0g-oxDLwTx3wS_RlnXB-2', target='_blank') TNod_СТАРЫЕ_версии
+            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
           li
             div.icon.prog.tnod32
-            a(href='https://drive.google.com/open?id=1FXzFYfft3nsMDDjE4R1l4eLIb9nJj3Yw', target='_blank') TNod1.6.5.0Beta
-            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki2019')
-          li
-            div.icon.prog.tnod32
-            a(href='https://drive.google.com/open?id=1X1cmktodjyPf80bbpuekVcmJXMys73Gq', target='_blank') TNod1.6.6.0Beta+Portable
-            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki2019')
+            a(href='https://drive.google.com/open?id=1AodVQ5PclVVuKgKfW7tSNTsfV--jpvOR', target='_blank') TNod_1.6.7.0
+            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
           li
             div.icon.prog.tnod32.info
-            a(href='https://drive.google.com/open?id=1XHGmrAC9EnDg1I7SJ9xP1STImwE6UKd7', target='_blank') Инструкции для N.O.D.32 ESET
+            a(href='https://drive.google.com/open?id=1Kr8mzGBbQ5w62JhPid9t2jSprhH1BZ6W', target='_blank') Инструкции для N.O.D.32 ESET
+            div.icontooinfo.a0zippass(title='заархивировано/пароль: zakladki')
